--- a/5star.html
+++ b/5star.html
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">百炼为战五星人物动态</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2022-05-29</h3>
+<h3 class="date">更新时间：2022-06-26</h3>
 </div>
 </header>
 
@@ -183,15 +183,15 @@
 </div>
 <div id="年-3" class="section level2" number="2.4">
 <h2><span class="header-section-number">2.4</span> 2022年</h2>
-<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。自5月开始则变成了每两周放一批。</p>
+<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是<strong>展示机器人</strong>。以下改为按发布日期排列。</p>
 <ul>
 <li>1月：救护车，爵士，红蜘蛛</li>
 <li>2月：声波，雷震，喷气机</li>
-<li>3月：横炮，警车，巨蝎勇士，惊破天</li>
-<li>4月：狂飙，录音机，恐龙勇士，碾碎器</li>
-<li>5月前两周：碎骨魔，热破</li>
-<li>5月后两周：猩猩队长，黄豹，野牛，反冲</li>
-<li>6月：</li>
+<li>2月24日：横炮，警车，巨蝎勇士，惊破天</li>
+<li>3月31日：狂飙，录音机，恐龙勇士，碾碎器</li>
+<li>5月5日：碎骨魔，热破</li>
+<li>5月19日：猩猩队长，黄豹，野牛，反冲</li>
+<li>6月23日：挽歌，阿尔茜，千斤顶，震荡波</li>
 <li>7月：</li>
 <li>8月：</li>
 <li>9月：</li>
@@ -199,12 +199,13 @@
 <li>11月：</li>
 <li>12月：</li>
 </ul>
-<p>2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。</p>
+<p>2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。</p>
 <p>闹翻天在2月25日登场。</p>
 <p>G1铁皮在3月31日登场。</p>
-<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。</p>
+<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙，也有猜是飞毛腿和双面人（出击/反击）的。</p>
 <p>5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！</p>
 <p>滑流在5月19日登场。</p>
+<p>补天士在6月23日登场。同时预告的有<strong>音板（Soundblaster），克劳莉娅（Chromia），飞毛腿（Sunstreaker）和封锁（Dead End）</strong>——看来卡邦真的是在新人物方面加大了研发投入！</p>
 </div>
 </div>
 <div id="世代币人物" class="section level1" number="3">
@@ -285,6 +286,7 @@
 <li>闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片</li>
 <li>G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开精英要塞水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。</li>
 <li>滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物+两周炒冷饭”的人物发布策略。</li>
+<li>补天士：精英英勇火焰水晶。</li>
 </ul>
 <!-- ```{r echo=FALSE, message=FALSE, warning=FALSE} -->
 <!-- library(magick) -->
