五星动态更新，闹翻天通贩

--- a/5star.html
+++ b/5star.html
@@ -15,7 +15,7 @@
 
 <title>百炼为战五星人物动态</title>
 
-<script src="5star_files/header-attrs-2.11/header-attrs.js"></script>
+<script src="5star_files/header-attrs-2.13/header-attrs.js"></script>
 
 
 
@@ -38,7 +38,7 @@
 <div class="inner">
 <h1 class="title toc-ignore">百炼为战五星人物动态</h1>
 <h3 class="author">公理天城翻译官</h3>
-<h3 class="date">更新时间：2022-06-26</h3>
+<h3 class="date">更新时间：2022-06-28</h3>
 </div>
 </header>
 
@@ -46,26 +46,27 @@
 <div id="TOC" class="toc">
 <div class="inner">
 <ul>
-<li><a href="#五星普通池"><span class="toc-section-number">1</span> 五星普通池</a>
+<li><a href="#五星普通池">五星普通池</a>
 <ul>
-<li><a href="#第一波2018年4月6.0版"><span class="toc-section-number">1.1</span> 第一波（2018年4月，6.0版）</a></li>
-<li><a href="#第二波2018年8月7.0版"><span class="toc-section-number">1.2</span> 第二波（2018年8月，7.0版）</a></li>
-<li><a href="#第三波2019年6月20日"><span class="toc-section-number">1.3</span> 第三波（2019年6月20日）</a></li>
-<li><a href="#第四波"><span class="toc-section-number">1.4</span> 第“四”波</a></li>
-<li><a href="#普通池后续人物"><span class="toc-section-number">1.5</span> 普通池后续人物</a></li>
+<li><a href="#第一波2018年4月6.0版">第一波（2018年4月，6.0版）</a></li>
+<li><a href="#第二波2018年8月7.0版">第二波（2018年8月，7.0版）</a></li>
+<li><a href="#第三波2019年6月20日">第三波（2019年6月20日）</a></li>
+<li><a href="#第四波">第“四”波</a></li>
+<li><a href="#普通池后续人物">普通池后续人物</a></li>
 </ul></li>
-<li><a href="#通用币人物"><span class="toc-section-number">2</span> 通用币人物</a>
+<li><a href="#通用币人物">通用币人物</a>
 <ul>
-<li><a href="#年"><span class="toc-section-number">2.1</span> 2019年</a></li>
-<li><a href="#年-1"><span class="toc-section-number">2.2</span> 2020年</a></li>
-<li><a href="#年-2"><span class="toc-section-number">2.3</span> 2021年</a></li>
-<li><a href="#年-3"><span class="toc-section-number">2.4</span> 2022年</a></li>
+<li><a href="#年">2019年</a></li>
+<li><a href="#年-1">2020年</a></li>
+<li><a href="#年-2">2021年</a></li>
+<li><a href="#年-3">2022年</a></li>
 </ul></li>
-<li><a href="#世代币人物"><span class="toc-section-number">3</span> 世代币人物</a></li>
-<li><a href="#野兽币人物"><span class="toc-section-number">4</span> 野兽币人物</a></li>
-<li><a href="#冷饭活动"><span class="toc-section-number">5</span> 冷饭活动</a></li>
-<li><a href="#泰坦碎片巨人碎片商店人物"><span class="toc-section-number">6</span> 泰坦碎片（巨人碎片）商店人物</a></li>
-<li><a href="#独家人物"><span class="toc-section-number">7</span> 独家人物</a></li>
+<li><a href="#世代币人物">世代币人物</a></li>
+<li><a href="#野兽币人物">野兽币人物</a></li>
+<li><a href="#冷饭活动">冷饭活动</a></li>
+<li><a
+href="#泰坦碎片巨人碎片商店人物">泰坦碎片（巨人碎片）商店人物</a></li>
+<li><a href="#独家人物">独家人物</a></li>
 </ul>
 </div>
 </div>
@@ -76,11 +77,11 @@
 <p>目前游戏最高星等为五星，虽然六星听了很久，连T5C火种也因为卡邦的疏忽被玩家买到过，但卡邦貌似已经没有资源来投入做六星的体系，所以五星也许是游戏最终的形态了。</p>
 <p>以下列出五星人物的获取方式演变历程，定期更新。</p>
 <p><em>注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2~4星的池子中，新人物如挽歌也已经进入了2~4星池，相信后续也会逐步更新，保证五星机器人都能解锁100锻。</em></p>
-<div id="五星普通池" class="section level1" number="1">
-<h1><span class="header-section-number">1</span> 五星普通池</h1>
+<div id="五星普通池" class="section level1">
+<h1>五星普通池</h1>
 <p>一般指五星碎片水晶能开到的机器人。3~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。</p>
-<div id="第一波2018年4月6.0版" class="section level2" number="1.1">
-<h2><span class="header-section-number">1.1</span> 第一波（2018年4月，6.0版）</h2>
+<div id="第一波2018年4月6.0版" class="section level2">
+<h2>第一波（2018年4月，6.0版）</h2>
 <ul>
 <li>碾碎器，猩猩队长</li>
 <li>阿尔茜，漂移</li>
@@ -90,8 +91,8 @@
 <li>红蜘蛛，通天晓</li>
 </ul>
 </div>
-<div id="第二波2018年8月7.0版" class="section level2" number="1.2">
-<h2><span class="header-section-number">1.2</span> 第二波（2018年8月，7.0版）</h2>
+<div id="第二波2018年8月7.0版" class="section level2">
+<h2>第二波（2018年8月，7.0版）</h2>
 <ul>
 <li>钢锁，斗擎</li>
 <li>热破，碎骨魔</li>
@@ -101,16 +102,16 @@
 <li>战威，恐龙勇士</li>
 </ul>
 </div>
-<div id="第三波2019年6月20日" class="section level2" number="1.3">
-<h2><span class="header-section-number">1.3</span> 第三波（2019年6月20日）</h2>
+<div id="第三波2019年6月20日" class="section level2">
+<h2>第三波（2019年6月20日）</h2>
 <ul>
 <li>汽车大师</li>
 <li>雷震</li>
 <li>爵士</li>
 </ul>
 </div>
-<div id="第四波" class="section level2" number="1.4">
-<h2><span class="header-section-number">1.4</span> 第“四”波</h2>
+<div id="第四波" class="section level2">
+<h2>第“四”波</h2>
 <p>自从发布第三波后，由于新人物基本上出到了头，为了拖延，卡邦不再这么豪迈地扩充五星普通池，而是变成了每月加一人。在加人的同时发布此人物的专属水晶（限时用12500五星碎片换一个，对该专属人物的掉落率大约15%）</p>
 <ul>
 <li>铁皮（2019年8月16日）</li>
@@ -129,18 +130,19 @@
 </ul>
 <p>在狂飙加入之后，普通五星池已经有40个机器人，剩下的6个（震天尊，亡灵天尊，大黄蜂，小黄蜂，惊天雷，黑擎）只能在泰坦货币商店买到，如无意外，普通五星池不会再改变了。</p>
 </div>
-<div id="普通池后续人物" class="section level2" number="1.5">
-<h2><span class="header-section-number">1.5</span> 普通池后续人物</h2>
+<div id="普通池后续人物" class="section level2">
+<h2>普通池后续人物</h2>
 <ul>
 <li>挽歌（在2022年3月31日，G1铁皮发布时，已有玩家从普通5星水晶中开出挽歌）</li>
+<li>闹翻天（2022年6月底）</li>
 </ul>
 </div>
 </div>
-<div id="通用币人物" class="section level1" number="2">
-<h1><span class="header-section-number">2</span> 通用币人物</h1>
+<div id="通用币人物" class="section level1">
+<h1>通用币人物</h1>
 <p>天火的发布<strong>暂时</strong>宣告了新人物开发的停止（但是后面还出了很多新人物），每月的专属机器人币也变成了通用币，通用币人物每月在商店中上架3~4个，轮完之后循环，所以只要你慢慢攒，总能拿到自己要的普通池机器人。</p>
-<div id="年" class="section level2" number="2.1">
-<h2><span class="header-section-number">2.1</span> 2019年</h2>
+<div id="年" class="section level2">
+<h2>2019年</h2>
 <ul>
 <li>1月：汽车大师，雷震，爵士</li>
 <li>2月：铁皮，录音机，风刃</li>
@@ -156,8 +158,8 @@
 <li>12月：斗擎，犀牛，碎骨魔</li>
 </ul>
 </div>
-<div id="年-1" class="section level2" number="2.2">
-<h2><span class="header-section-number">2.2</span> 2020年</h2>
+<div id="年-1" class="section level2">
+<h2>2020年</h2>
 <ul>
 <li>1月：救护车，红蜘蛛，爵士</li>
 <li>2月：雷震，声波，喷气机</li>
@@ -174,16 +176,16 @@
 </ul>
 <p>总结：2020年每个季度都采用了3+3+4的方式发布10个人物，一年40个，也正好对应40个普通五星池的人物。<del>游戏已经基本上趋于圆寂的状态</del>。</p>
 </div>
-<div id="年-2" class="section level2" number="2.3">
-<h2><span class="header-section-number">2.3</span> 2021年</h2>
+<div id="年-2" class="section level2">
+<h2>2021年</h2>
 <p>2021年的人物币人物出场顺序至5月都<strong>与2020年如出一辙</strong>，卡邦貌似已经完全固化了这个顺序。如果游戏一直存在下去，这也算一种能让新玩家入坑后明确规划自己发展方向的途径。</p>
 <p>2021年，没有出六星，而是出了<strong>五星六阶</strong>的升级方式：需要一种新的火种——T5B。T5B的获取在最初略显困难，很多玩家为了抢第一杯羹，不惜大量出售T4B来换取。但自从加入到特殊探索任务的奖励（2000精华）后，最佛系的玩家两个半月也能搞到一个。加上T3A从腐朽要塞水晶中可以大量获得，升级六阶的压力依然在T4C上。</p>
 <p>今年周年庆新出了爆破系的飞过山。</p>
 <p>就在大家以为游戏慢慢凉了的时候，挽歌在12月22日登场。</p>
 </div>
-<div id="年-3" class="section level2" number="2.4">
-<h2><span class="header-section-number">2.4</span> 2022年</h2>
-<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是<strong>展示机器人</strong>。以下改为按发布日期排列。</p>
+<div id="年-3" class="section level2">
+<h2>2022年</h2>
+<p>22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是<strong>展示机器人</strong>，所以后面改为按发布日期列出。</p>
 <ul>
 <li>1月：救护车，爵士，红蜘蛛</li>
 <li>2月：声波，雷震，喷气机</li>
@@ -192,24 +194,20 @@
 <li>5月5日：碎骨魔，热破</li>
 <li>5月19日：猩猩队长，黄豹，野牛，反冲</li>
 <li>6月23日：挽歌，阿尔茜，千斤顶，震荡波</li>
-<li>7月：</li>
-<li>8月：</li>
-<li>9月：</li>
-<li>10月：</li>
-<li>11月：</li>
-<li>12月：</li>
 </ul>
 <p>2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。</p>
 <p>闹翻天在2月25日登场。</p>
 <p>G1铁皮在3月31日登场。</p>
-<p>4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙，也有猜是飞毛腿和双面人（出击/反击）的。</p>
+<p>4月12日YouTube的Hasbro
+Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙，也有猜是飞毛腿和双面人（出击/反击）的。</p>
 <p>5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！</p>
 <p>滑流在5月19日登场。</p>
-<p>补天士在6月23日登场。同时预告的有<strong>音板（Soundblaster），克劳莉娅（Chromia），飞毛腿（Sunstreaker）和封锁（Dead End）</strong>——看来卡邦真的是在新人物方面加大了研发投入！</p>
+<p>补天士在6月23日登场。同时预告的有<strong>音板（Soundblaster），克劳莉娅（Chromia），飞毛腿（Sunstreaker）和封锁（Dead
+End）</strong>——看来卡邦真的是在新人物方面加大了研发投入！</p>
 </div>
 </div>
-<div id="世代币人物" class="section level1" number="3">
-<h1><span class="header-section-number">3</span> 世代币人物</h1>
+<div id="世代币人物" class="section level1">
+<h1>世代币人物</h1>
 <p>指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：</p>
 <ul>
 <li>第1周：战擎/震荡波/阿尔茜/惊破天/汽车大师/爵士</li>
@@ -218,16 +216,16 @@
 <li>第4周：千斤顶/风刃/红蜘蛛/救护车/野牛/反冲</li>
 </ul>
 </div>
-<div id="野兽币人物" class="section level1" number="4">
-<h1><span class="header-section-number">4</span> 野兽币人物</h1>
+<div id="野兽币人物" class="section level1">
+<h1>野兽币人物</h1>
 <p>指2019年12月卡邦针对BW人物举行的活动。总共就6个BW人物（猩猩队长/巨蝎勇士/黄豹/犀牛/黄蜂勇士/恐龙勇士），尽数上架。</p>
 </div>
-<div id="冷饭活动" class="section level1" number="5">
-<h1><span class="header-section-number">5</span> 冷饭活动</h1>
+<div id="冷饭活动" class="section level1">
+<h1>冷饭活动</h1>
 <p>2022年开始为填补新人物发布间空档期（两周），卡邦会把一些之前的活动重新拿出来。例如霸天虎活动，电影人物活动。套路都是肝主题币，换3/4/5星人物。</p>
 </div>
-<div id="泰坦碎片巨人碎片商店人物" class="section level1" number="6">
-<h1><span class="header-section-number">6</span> 泰坦碎片（巨人碎片）商店人物</h1>
+<div id="泰坦碎片巨人碎片商店人物" class="section level1">
+<h1>泰坦碎片（巨人碎片）商店人物</h1>
 <p>以下人物在泰坦碎片商店可以购得，长期有效。</p>
 <table>
 <thead>
@@ -272,8 +270,8 @@
 </tbody>
 </table>
 </div>
-<div id="独家人物" class="section level1" number="7">
-<h1><span class="header-section-number">7</span> 独家人物</h1>
+<div id="独家人物" class="section level1">
+<h1>独家人物</h1>
 <p>除此之外，下列人物的五星版本有独特的方式获取：</p>
 <ul>
 <li>战术大黄蜂：金轮水晶</li>
