更新狂飙、更新锻造中饿鲨部分

--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -195,7 +195,7 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-08-21</em></p>
+<p class="date"><em>更新时间：2022-08-24</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -203,11 +203,12 @@
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>（只包含主要的更新，不含小修改）</em></p>
 <ul>
+<li>2022年8月24日：更新<a href="战术系.html#狂飙">狂飙</a>。</li>
 <li>2022年8月21日：新增<a href="斗士系.html#飞毛腿">飞毛腿</a>，介绍擎天柱组合金刚协同（见<a href="战术系.html#战擎">战擎</a>）。</li>
-<li>2022年6月26日：新增<a href="战术系.html#补天士">补天士</a></li>
+<li>2022年6月26日：新增<a href="战术系.html#补天士">补天士</a>。</li>
 <li>2022年5月30日：
 <ul>
-<li>新增<a href="侦查系.html#滑流">滑流</a>，调整<a href="战术系.html#大黄蜂">大黄蜂</a>，<a href="战术系.html#通天晓">通天晓</a>，<a href="斗士系.html#斗擎">斗擎</a>，<a href="斗士系.html#碾碎器">碾碎器</a></li>
+<li>新增<a href="侦查系.html#滑流">滑流</a>，调整<a href="战术系.html#大黄蜂">大黄蜂</a>，<a href="战术系.html#通天晓">通天晓</a>，<a href="斗士系.html#斗擎">斗擎</a>，<a href="斗士系.html#碾碎器">碾碎器</a>。</li>
 <li>更新<a href="对战ai策略.html#在哪找对练">在哪找对练？</a>，加入第三幕的敌人位置。</li>
 </ul></li>
 <li>2022年5月10日：
@@ -218,14 +219,14 @@
 <li>2022年4月29日：
 <ul>
 <li>修正<a href="术语与打法.html#侧闪反击">侧闪反击</a></li>
-<li>重写<a href="战术系.html#战擎">战擎</a>、<a href="科技系.html#天火">天火</a>、<a href="战士系.html#亡灵天尊">亡灵天尊</a>、<a href="爆破系.html#飞过山">飞过山</a></li>
+<li>重写<a href="战术系.html#战擎">战擎</a>、<a href="科技系.html#天火">天火</a>、<a href="战士系.html#亡灵天尊">亡灵天尊</a>、<a href="爆破系.html#飞过山">飞过山</a>。</li>
 <li>调整<a href="战术系.html#战威">战威</a>（加入震荡波*4的控气协同玩法）</li>
 </ul></li>
 <li>2022年4月20日：修订<a href="战士系.html#阿尔茜">阿尔茜</a>、<a href="侦查系.html#路障">路障</a>、<a href="战术系.html#暗黑擎天柱">暗黑擎天柱</a>和G1铁皮S2躲法。</li>
 <li>2022年4月18日：
 <ul>
 <li>新增<a href="对战ai策略.html#对战ai策略">对战AI策略</a>章节，分析所有角色电脑AI应对策略，包括所有S1、S2闪避方式。</li>
-<li>重写<a href="战士系.html#探长">探长</a>玩法；修订<a href="科技系.html#天火">天火</a>，<a href="侦查系.html#黄豹">黄豹</a>，<a href="战士系.html#巨蝎勇士">巨蝎勇士</a>，<a href="斗士系.html#汽车大师">汽车大师</a>，<a href="斗士系.html#g1铁皮">G1铁皮</a></li>
+<li>重写<a href="战士系.html#探长">探长</a>玩法；修订<a href="科技系.html#天火">天火</a>，<a href="侦查系.html#黄豹">黄豹</a>，<a href="战士系.html#巨蝎勇士">巨蝎勇士</a>，<a href="斗士系.html#汽车大师">汽车大师</a>，<a href="斗士系.html#g1铁皮">G1铁皮</a>。</li>
 </ul></li>
 <li>2022年4月12日：<a href="斗士系.html#g1铁皮">G1铁皮解析</a>，修复能力雷达图刻度错误。</li>
 <li>2022年4月6日：挽歌、闹翻天解析。</li>
