--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -218,14 +218,14 @@
 <li>3个特殊技的斧头攻击都可以触发破甲：
 <ul>
 <li>S1后两下是斧头攻击。并且S1之后还可以获得加攻，牺牲的队友越多，加攻越多。</li>
-<li>S2就是三板斧。输出巨大，短战斗一招制敌，S3能永久破甲配合招牌能力大幅度提高输出。</li>
-<li>S3最后一击必然施加破甲，并且是永久破甲。</li>
+<li>S2就是三板斧。输出巨大，短战斗一招制敌。</li>
+<li>S3最后一击必然施加破甲，并且是永久破甲。配合招牌能力大幅度提高输出。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌" class="section level4 hasAnchor" number="3.1.1.2">
 <h4><span class="header-section-number">3.1.1.2</span> 招牌<a href="战术系.html#招牌" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>暴击破甲状态下的对手会造成流血，和侦查和战士系不同，战擎这个是出了暴击就100%流血！事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士。配合S3的永久破甲（俗称脱衣打法），再加深度创伤精通，进一步提高输出。</p>
+<p>暴击破甲状态下的对手会造成流血，和侦查和战士系不同，战擎是出了暴击就100%流血！事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士。配合S3的永久破甲（俗称脱衣打法），再加深度创伤精通，进一步提高输出。</p>
 </div>
 <div id="协同" class="section level4 hasAnchor" number="3.1.1.3">
 <h4><span class="header-section-number">3.1.1.3</span> 协同<a href="战术系.html#协同" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -240,7 +240,7 @@
 <ul>
 <li>队伍中至少有两人</li>
 <li>必须要有一个战擎</li>
-<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说起作用的是五星和三星的战擎，队伍中有他们，开局可以出S2。于是就有人开发出了盟战用五星三星战擎加五星警车去打，虽然缺一个人，但是战擎开局有个S2起步可以迅速启动S3永久破甲，警车则可以早早S2糊脸上或者后撤上到S3锁气。推图用这个组合，低难度的关卡可以一路S2解决战斗。想必这个bug和三星G1铁皮给警车的加成一样会很快被修复掉吧。</li>
+<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，可以重复，但不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说，起作用的是五星和三星的战擎：队伍中有这两个人，开局可以出S2！于是就有人开发出了盟战用五星、三星战擎加五星警车去打，虽然队伍中只有两个有效人物，但是战擎开局有个S2起步，可以迅速启动S3永久破甲，警车则可以早早S2糊脸，或者后撤上到S3锁气，盟战难度70以下这个组合基本上是横着走（而且明显这个协同不止加能量，攻击力也大幅度提升了）。推图用这个组合，低难度的关卡可以警车一路S2解决战斗。想必这个bug和三星G1铁皮给警车的加成一样会很快被修复掉吧。</li>
 </ul></li>
 </ul>
 </div>
@@ -601,19 +601,31 @@
 <div id="能力-6" class="section level4 hasAnchor" number="3.7.1.1">
 <h4><span class="header-section-number">3.7.1.1</span> 能力<a href="战术系.html#能力-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>黑暗场：发动时提升攻击力，光圈一闪将对手弹开，并驱散对方buff造成额外伤害，经常能在被打时迅速脱身。能驱散的类型很多，但是并不是根治，尤其盟战中各类模块，很多是驱散几秒又回来了。</li>
-<li>被动黑暗场：除惊破天招牌外，对手带着霸体冲向狂飙会使之自动发动黑暗场并致晕对手，这狂飙独步武林的绝活使得他在面对让人头疼的汽车大师和狂暴集中模块时有一种“拳打南山敬老院，脚踢北海幼儿园”的自信。但是——在特定条件下依然触发不了，所以建议看到冲过来时先礼貌性地侧闪。</li>
-<li>训诫：让狂飙自动根据实际的战斗情况，将自己的基础数值（射速，近战，抗性）加以调整，让他在主动进攻时气势如虹，被动挨打时转危为安。</li>
-<li>S1的护甲穿透输出稳定，S2除了输出高并无甚亮点（毕竟在玩家使用的时候，特殊技都是在连招中触发的，不用在意最后一击的破防），S3后在10秒之内连续发黑暗场，十分霸气。</li>
+<li>黑暗能量：得到一格气时得到黑暗能量，提升攻击力6秒</li>
+<li>黑暗场：得到黑暗能量的瞬间或者带着黑暗能量完成一套连击时触发黑暗场，此时光圈一闪可以将对手弹开，黑暗场会触发攻击力20%的黑暗燃烧伤害，并驱散对方一个buff。能驱散的类型很多，但是并不是根治，尤其盟战中各类模块，很多是驱散几秒又回来了。由于光圈会弹开对手，在面对狂飙的时候不能很痛快地打近战连击。</li>
+<li>被动黑暗场：对手带着霸体冲向狂飙会使之自动发动黑暗场并致晕对手，这狂飙独步武林的绝活使得他在面对让人头疼的汽车大师和狂暴集中模块时有一种“拳打南山敬老院，脚踢北海幼儿园”的自信，可惜在自己的领导——惊破天触发招牌霸体面前，狂飙的被动黑暗场不会发动。另外很多玩家反馈过大师冲过来也不是100%都能触发，所以还是条件反射地侧闪先。</li>
+<li>训诫：让狂飙自动根据实际的战斗情况，将自己的基础数值（射速，近战，抗性）加以调整，让他在主动进攻时气势如虹，被动挨打时转危为安。
+<ul>
+<li>被近战击中五次，获得18~28%的物理抗性7~9秒</li>
+<li>远程攻击打中对方6次，获得15~25%的远程伤害加成5~7秒</li>
+<li>近战攻击打中对方10次，获得15~25%的近战伤害加成5~7秒</li>
+</ul></li>
+<li>S1：100%护甲穿透，直接用来对付斗士很安逸</li>
+<li>S2：除了输出高并无甚亮点。毕竟在玩家使用的时候，特殊技都是在连招中触发的，不用在意最后一击的破防。</li>
+<li>S3：完成后在10秒之内连续发黑暗场，可以霸气外露地借助光圈护体压上去进攻。</li>
 </ul>
 </div>
 <div id="招牌-5" class="section level4 hasAnchor" number="3.7.1.2">
 <h4><span class="header-section-number">3.7.1.2</span> 招牌<a href="战术系.html#招牌-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>线性提高黑暗场的伤害，属于锦上添花的功能。而在面对高觉醒的狂飙对手，想要无伤真的很难。</p>
+<p>线性提高黑暗场的伤害20~120%，属于锦上添花的功能。而在面对高觉醒的狂飙对手，想要无伤真的很难。</p>
 </div>
 <div id="协同-6" class="section level4 hasAnchor" number="3.7.1.3">
 <h4><span class="header-section-number">3.7.1.3</span> 协同<a href="战术系.html#协同-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>与惊破天一起出战时，团队中所有霸天虎提升特殊与暴击伤害，适合全霸天虎阵容。</p>
+<ul>
+<li>盟友（双向：反冲、野牛）：加护甲</li>
+<li>敌人（双向：通天晓、阿尔茜、录音机）：加攻击</li>
+<li>混沌之手（团队：惊破天）：惊破天和狂飙一起出战时，团队中所有霸天虎提升特殊与暴击伤害，适合全霸天虎阵容。</li>
+</ul>
 </div>
 <div id="短板-6" class="section level4 hasAnchor" number="3.7.1.4">
 <h4><span class="header-section-number">3.7.1.4</span> 短板<a href="战术系.html#短板-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -628,7 +640,11 @@
 <h3><span class="header-section-number">3.7.2</span> 推荐打法<a href="战术系.html#推荐打法-6" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗-6" class="section level4 hasAnchor" number="3.7.2.1">
 <h4><span class="header-section-number">3.7.2.1</span> 短战斗<a href="战术系.html#短战斗-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>标准的近战打法，围绕S1或S2打输出。小技巧：在身上黑暗能量快过期的时候，连招要尽快打出最后一击，也就是不要等5下就连续右滑，多触发一次黑暗场伤害。狂飙有黑暗能量时即使被对手防住，也可以打满5下，靠黑暗场把对方安全推开。</p>
+<p>标准的近战打法，围绕S1或S2打输出。觉醒不高的时候，多用S1，因为护甲穿透的伤害更稳定，觉醒高了之后，用S2，但不是因为S2输出更大，而是因为S技的动画时间拖延了黑暗场的有效期，同样是两格气，少用一次S技意味着多打几套连击，赚取黑暗场的伤害。</p>
+<ul>
+<li>小技巧1：在身上黑暗能量快过期的时候，连招要尽快打出最后一击，也就是不要等5下就连续右滑，多触发一次黑暗场伤害。</li>
+<li>小技巧2：狂飙有黑暗能量时即使被对手防住，也可以打满5下，靠黑暗场把对方安全推开。</li>
+</ul>
 </div>
 <div id="长战斗-6" class="section level4 hasAnchor" number="3.7.2.2">
 <h4><span class="header-section-number">3.7.2.2</span> 长战斗<a href="战术系.html#长战斗-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -677,7 +693,7 @@
 </div>
 <div id="短板-7" class="section level4 hasAnchor" number="3.8.1.4">
 <h4><span class="header-section-number">3.8.1.4</span> 短板<a href="战术系.html#短板-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>黑擎并没有太大短板，无非是没有战擎的高输出高爆发，这和他的招牌加一块，就把他定位在战斗时间较长的角色中了。另外相比战擎，黑擎的S3简直难堪大用。</p>
+<p>在官方聊天频道里面，多数玩家认为黑擎是最差战术，看技能，黑擎并没有太大短板，无非是没有战擎的高输出高爆发，这和他的招牌加一块，就把他定位在战斗时间较长的角色中了。另外相比战擎，黑擎的S3简直难堪大用。</p>
 <p>特别要注意别他的S2破甲，看描述是“驱散每一个护甲增益”，但是还有一行小字“要消耗3个黑暗能量”，真是有一种“全场9.99元——起（小字）”的无语。实战中面对敌人并不能像战擎那样一个S2砍瓜切菜高伤害。而伤害不高，偷回来的血也就少了。</p>
 </div>
 </div>
