--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -701,6 +701,7 @@
 <div id="特点分析-17" class="section level3 hasAnchor" number="4.9.1">
 <h3><span class="header-section-number">4.9.1</span> 特点分析<a href="斗士系.html#特点分析-17" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>作为横炮的兄弟，飞毛腿被分配到斗士稍微有点意外，手上拿着个怪异的武器也是比较有个性。</p>
+<p>虽然飞毛腿的普通近战用的是汽车大师和钢锁的剑痞流，但S1和S2属于全新设计。原地站立举起刀的姿势也是新设计。</p>
 <div id="能力-17" class="section level4 hasAnchor" number="4.9.1.1">
 <h4><span class="header-section-number">4.9.1.1</span> 能力<a href="斗士系.html#能力-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
