更新飞毛腿，更新站点首页域名部分

--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -240,7 +240,7 @@
 <ul>
 <li>队伍中至少有两人</li>
 <li>必须要有一个战擎</li>
-<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，可以重复，但不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说，起作用的是五星和三星的战擎：队伍中有这两个人，开局可以出S2！于是就有人开发出了盟战用五星、三星战擎加五星警车去打，虽然队伍中只有两个有效人物，但是战擎开局有个S2起步，可以迅速启动S3永久破甲，警车则可以早早S2糊脸，或者后撤上到S3锁气，盟战难度70以下这个组合基本上是横着走（而且明显这个协同不止加能量，攻击力也大幅度提升了）。推图用这个组合，低难度的关卡可以警车一路S2解决战斗。想必这个bug和三星G1铁皮给警车的加成一样会很快被修复掉吧。</li>
+<li>其余成员可以在战擎、幻影、飞毛腿、G1铁皮、警车之中选择，可以重复，但不能选择之外的角色，否则协同不起作用。而很快玩家就发现，带多个战擎可以让开局的能量更多，具体来说，五星和四星都是给一格多，但是五星和四星不能叠加，三星则是给将近一格，可以与五星或四星叠加。于是<strong>队伍中有五三或者四三战擎，所有成员开局可以出S2</strong>！于是就有人开发出了盟战用五星、三星战擎加五星警车去打，虽然队伍中只有两个有效人物，但是战擎开局有个S2起步，可以迅速启动S3永久破甲，警车则可以早早S2糊脸，或者后撤上到S3锁气，盟战难度70以下这个组合基本上是横着走（而且明显这个协同不止加能量，攻击力也大幅度提升了）。推图用这个组合，低难度的关卡可以警车一路S2解决战斗。</li>
 </ul></li>
 </ul>
 </div>
