--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -710,7 +710,7 @@
 <li>重击：30%概率得到一个14%的近战加成5秒。</li>
 <li>状态变化：体力60%以上称为<strong>整洁状态</strong>，体力40%以下称为<strong>污损状态</strong>，40~60%这一段没有状态。这设定是来自飞毛腿自恋的个性，一如飞毛腿的专属水晶名叫“虚荣水晶”。
 <ul>
-<li>整洁状态下：拥有8~20%的护甲。10%的概率规避近战攻击，30%规避近战暴击<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。<strong>飞毛腿是第一个能规避的斗士！</strong></li>
+<li>整洁状态下：拥有8~20%的护甲，10%的概率规避近战攻击，30%规避近战暴击<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。<strong>飞毛腿是第一个能规避的斗士！</strong></li>
 <li>污损状态下：拥有8~20%的近战加成，5秒不可阻挡</li>
 </ul></li>
 <li>S技：
@@ -737,20 +737,21 @@
 </div>
 <div id="短板-17" class="section level4 hasAnchor" number="4.9.1.4">
 <h4><span class="header-section-number">4.9.1.4</span> 短板<a href="斗士系.html#短板-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>飞毛腿在斗士中算是技能比较全面的，但实际感觉是什么都会却什么都不精：有净化，但不像钢锁惊天雷想净化的时候就能净化；有规避，但不像大黄蜂、横炮、反冲能在关键的时候用规避来保命；有霸体，但不像汽车大师那样与进攻相配合，感觉不咸不淡。</p>
 </div>
 </div>
 <div id="推荐打法-17" class="section level3 hasAnchor" number="4.9.2">
 <h3><span class="header-section-number">4.9.2</span> 推荐打法<a href="斗士系.html#推荐打法-17" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>飞毛腿除了能量来得快外，几乎所有的能力都集中在两种状态和S技的搭配上，所以首先要解说清楚。</p>
-<p>除了40~60%血这短暂的中间状态可以比较放肆，其他两个状态下要选择合适的S技，如果状态和S技没有匹配好（整洁用S2，污损用S1），则会变成最后一击不可防御这种鸡肋效果，只有在<strong>整洁用S1，污损用S2</strong>，才能得到Buff（有Buff才能有机会触发招牌），和天尊的神力对齐类似。这一点也挺符合人物的个性：在光鲜亮丽时追求霸体和加攻，豪情万丈，在血不够时追求规避和护甲，以求苟活。</p>
-<p>如果你觉得这种交错的设定太费脑，实战中可能直奔S3比较好。</p>
+<p>除了40~60%血这短暂的中间状态可以比较放肆（放任何S技都同时来两个加成，又规避又霸体的），其他两个状态下要选择合适的S技，如果状态和S技没有匹配好（整洁用S2，污损用S1），则会变成最后一击不可防御这种鸡肋效果，只有在<strong>整洁用S1，污损用S2</strong>，才能得到Buff（有Buff才能有机会触发招牌），和天尊的神力对齐类似。这一点也挺符合人物的个性：在光鲜亮丽时追求霸体和加攻，豪情万丈，在血不够时追求规避和护甲，以求苟活。</p>
+<p>如果你觉得这种交错的设定太费脑，实战中可能直奔S3比较好。由于重击获取近战加成的概率一般般，强度也不如污损状态下的近战加成，所以重击只用于破防，平时打满五连，加快能量的获取。</p>
 <div id="短战斗-16" class="section level4 hasAnchor" number="4.9.2.1">
 <h4><span class="header-section-number">4.9.2.1</span> 短战斗<a href="斗士系.html#短战斗-16" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>（由于飞毛腿发布时S1有打不中的bug，显然卡邦有义务修复，否则整个技能体系是残缺的，以下假设S1是正常）</p>
 <ul>
 <li>如果战斗开始于整洁状态，则围绕S1打输出；</li>
-<li>开始于中间状态也用S1，因为这样状态出得快，更可能触发招牌；</li>
-<li>开始于污损状态，就围绕S2。</li>
+<li>开始于中间状态也用S1，因为这样加成出得快，更可能触发招牌；</li>
+<li>开始于（或者被打到）污损状态，就一直用S2。</li>
 </ul>
 </div>
 <div id="长战斗-16" class="section level4 hasAnchor" number="4.9.2.2">
