--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <h1 class="title">百炼为战信息小站</h1>
     <!-- </div> -->
-    <p>新的简域名<a href=https://kmcbest.tk>kmcbest.tk</a>已启用，原域名<a href=https://kmcbest-github-io.vercel.app/>https://kmcbest-github-io.vercel.app</a>保持不变</p>
+    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>，
+    <a href=https://kmcbest.tk>kmcbest.tk</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</p>
     <ul>
         <li><a href="chars_book/index.html">全人物解析</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
