飞毛腿微调

--- a/chars_book/对战ai策略.html
+++ b/chars_book/对战ai策略.html
@@ -295,6 +295,11 @@
 <p><strong>S1：后，后，后；S2：后，后，侧</strong>。S1因为老铁比较磨叽，所以要掌握好节奏，而且第二发的霰弹枪虽然没有警车那样飞全屏，但是实际闪起来总是感觉判定时间比较长，建议连续后闪两下拉开距离，这样最后那一拳就不用闪了。S2闪掉前两发记得第三发是侧闪，只要不打中是不会出霸体的。</p>
 <p>铁皮S1和S2的诡异性一方面让人很难躲好，另一方面，真被打中了还可以试着侧闪脱身…</p>
 </div>
+<div id="对战ai飞毛腿" class="section level3 hasAnchor" number="10.2.9">
+<h3><span class="header-section-number">10.2.9</span> 对战AI飞毛腿<a href="对战ai策略.html#对战ai飞毛腿" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>AI飞毛腿肯定不会很有效地把S技和状态搭配着用，所以主要就关注两个点：1、由于克制规避的角色以战士居多，所以如果不是用劣势角色打飞毛腿，就要注意对方整洁状态下的规避；2、进入污损状态的时候会迅速出霸体，所以如果不能在40%血附近有效地“定住”对方（例如打晕，或S技打中后的硬直），就要注意对方可能被打的时候突然回过头反击你。</p>
+<p><strong>S1：后，后；S2：后，后，后</strong>。飞毛腿的S技不难躲，但因为全是近战判定，攻击范围也不小，别在侧闪中被抓到了。</p>
+</div>
 </div>
 <div id="战士系-1" class="section level2 hasAnchor" number="10.3">
 <h2><span class="header-section-number">10.3</span> <img src="images/Warrior-small.png" style="height:0.6cm" />战士系<a href="对战ai策略.html#战士系-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
@@ -517,13 +522,13 @@
 </div>
 <div id="对战ai飞过山" class="section level3 hasAnchor" number="10.6.8">
 <h3><span class="header-section-number">10.6.8</span> 对战AI飞过山<a href="对战ai策略.html#对战ai飞过山" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>飞过山的技能不痛不痒，没有其他爆破系的爆发（至少电脑很难在玩家身上发挥出这个优势），没有什么可怕的。多骗S1就好。</p>
+<p>飞过山的技能不痛不痒，没有其他爆破系的爆发（至少电脑很难在玩家身上发挥出这个优势），没有什么可怕的，多骗S1就好。实在到了S2也要小心些。另外飞过山的轻攻击最后一下上勾拳虽然动作是犀牛的动作，却可以把人弹开老远离开近战范围。如果平时被飞过山打了一套用轻攻击结束的连击，就别习惯性地一拳打回头了，因为你会发现这时你在开枪。</p>
 <p><strong>S1：后，侧；S2：侧，侧，侧，侧，侧</strong>，分别是震荡波和电影铁皮的技能。</p>
 </div>
 </div>
 <div id="在哪找对练" class="section level2 hasAnchor" number="10.7">
 <h2><span class="header-section-number">10.7</span> 在哪找对练？<a href="对战ai策略.html#在哪找对练" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>要熟悉如何对战这么多AI角色，打竞技场是个不错的选择，但竞技场第一不能想碰谁就碰谁，第二自己的角色用一局就不能再用了。大部分人要找对练都会去传奇1打搅拌者，但搅拌者毕竟只代表他自己，想练习面对特定的角色（比如练好对战汽车大师的霸体前冲，以防被秒），或者有些特别的技能想验证（比如说天火能不能招架住无法格挡的招式？）的时候，怎样能实现<strong>想打谁就打谁</strong>呢？</p>
+<p>要熟悉如何对战这么多AI角色，打竞技场是个不错的选择，但竞技场第一不能想碰谁就碰谁，第二自己的角色用一局就不能再用了。大部分人要找对练都会去传奇1打搅拌者，但搅拌者毕竟只代表他自己，想练习面对特定的角色（比如练好对战汽车大师的霸体前冲，以防被秒），或者有些特别的技能想验证（比如说天火能不能招架住无法格挡的招式？）的时候，或者有些概率要对比（比如阿尔茜和黄豹都出招牌，黄豹会不会规避阿尔茜），怎样能实现<strong>想打谁就打谁</strong>呢？</p>
 <p>特殊任务虽然敌人很强，但每个月都会换，只有故事模式和传奇模式的对手是一成不变的，所以最省能量的方法就是找进图第一位。于是我盘点了所有角色在故事和传奇中最早能遇到的位置，可以说大部分角色都能找到并且跑几步就能跑到，不是很耗能量。</p>
 <p>既然是练习，太弱的对手意义不大。传奇1和2都是一条线，分别取了看门的搅拌者和猩猩队长。传奇3每条线取了看门的。剩下的对手大部分位于故事模式第3和第4章，战力在几千到两万之间，所以需要<strong>把故事探索完</strong>并且<strong>挑选合适的机器人去练</strong>，你自己的主力如果碾压对方，也起不到对练的效果了。</p>
 <p>以下如无特别说明，都是进入关卡后某条分支路线上的第一位。反冲和野牛实在找不到，所幸他们都在某个关底当Boss。几个近期的新人物如飞过山、挽歌、闹翻天和G1铁皮比故事模式都要新，所以也没有，但相信他们几个肯定会在新的盟战地图中折腾大家很长时间的。</p>
