--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -701,7 +701,7 @@
 <div id="特点分析-17" class="section level3 hasAnchor" number="4.9.1">
 <h3><span class="header-section-number">4.9.1</span> 特点分析<a href="斗士系.html#特点分析-17" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>作为横炮的兄弟，飞毛腿被分配到斗士稍微有点意外，手上拿着个怪异的武器也是比较有个性。</p>
-<p>虽然飞毛腿的普通近战用的是汽车大师和钢锁的剑痞流，但S1和S2属于全新设计。原地站立举起刀的姿势也是新设计。</p>
+<p>虽然飞毛腿的普通近战用的是汽车大师和钢锁的剑痞流，拥有很大的攻击判定范围，但S1和S2属于全新设计。原地站立举起刀的姿势也是新设计。</p>
 <div id="能力-17" class="section level4 hasAnchor" number="4.9.1.1">
 <h4><span class="header-section-number">4.9.1.1</span> 能力<a href="斗士系.html#能力-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
@@ -711,7 +711,7 @@
 <li>状态变化：体力60%以上称为<strong>整洁状态</strong>，体力40%以下称为<strong>污损状态</strong>，40~60%这一段没有状态。这设定是来自飞毛腿自恋的个性，一如飞毛腿的专属水晶名叫“虚荣水晶”。
 <ul>
 <li>整洁状态下：拥有8~20%的护甲，10%的概率规避近战攻击，30%规避近战暴击<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。<strong>飞毛腿是第一个能规避的斗士！</strong></li>
-<li>污损状态下：拥有8~20%的近战加成，5秒不可阻挡</li>
+<li>污损状态下：拥有8~20%的近战加成，5秒不可阻挡。和爆威提前喊一句“你会后悔的！”才出霸体不一样，飞毛腿体力降到40%以下会立即触发不可阻挡，所以每局至少有一次可以“无赖”地从对方的进攻中脱逃。</li>
 </ul></li>
 <li>S技：
 <ul>
